# parallel_prog_labs

./: .gitignore  CMakeLists.txt
cuda/: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/src/: inner.cpp  main.cpp  sqrt.cpp
lab2/: CMakeLists.txt
lab2/src/: bst_set.cpp  main.cpp  matr.cpp
lab3/: CMakeLists.txt
lab3/src/: new_writers_readers.cpp  producer_consumer.cpp  writers_readers.cpp
lab4/: CMakeLists.txt
lab4/src/: barbershop.cpp  new_philosopher.cpp  phil_back.cpp  philosophers.cpp
lab5/: CMakeLists.txt
lab5/src/: dotProd.cpp  extremum.cpp  main.cpp  reduction.cpp
lab6/: CMakeLists.txt
lab6/src/: additional.cpp
lab7/: CMakeLists.txt
lab7/src/: main.cpp
parAlgs/: CMakeLists.txt
parAlgs/src/: calculatePi.cpp  main.cpp
